--- a/ModBus_RTU_Implement.ioc
+++ b/ModBus_RTU_Implement.ioc
@@ -49,17 +49,16 @@ Mcu.CPN=STM32F407ZGT6
 Mcu.Family=STM32F4
 Mcu.IP0=ADC1
 Mcu.IP1=DMA
-Mcu.IP10=USART2
-Mcu.IP11=USART3
+Mcu.IP10=USART3
 Mcu.IP2=FSMC
 Mcu.IP3=NVIC
 Mcu.IP4=RCC
 Mcu.IP5=SPI1
 Mcu.IP6=SYS
-Mcu.IP7=TIM2
-Mcu.IP8=TIM4
-Mcu.IP9=USART1
-Mcu.IPNb=12
+Mcu.IP7=TIM3
+Mcu.IP8=USART1
+Mcu.IP9=USART2
+Mcu.IPNb=11
 Mcu.Name=STM32F407Z(E-G)Tx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE3
@@ -102,14 +101,13 @@ Mcu.Pin41=PB3
 Mcu.Pin42=PB4
 Mcu.Pin43=PB5
 Mcu.Pin44=VP_SYS_VS_Systick
-Mcu.Pin45=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin46=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin45=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin5=PC0
 Mcu.Pin6=PC1
 Mcu.Pin7=PC2
 Mcu.Pin8=PA2
 Mcu.Pin9=PA3
-Mcu.PinsNb=47
+Mcu.PinsNb=46
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407ZGTx
@@ -126,8 +124,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
-NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.TIM4_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.USART3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA10.Mode=Asynchronous
@@ -240,7 +237,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART3_UART_Init-USART3-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true,6-MX_USART1_UART_Init-USART1-false-HAL-true,7-MX_ADC1_Init-ADC1-false-HAL-true,8-MX_FSMC_Init-FSMC-false-HAL-true,9-MX_TIM2_Init-TIM2-false-HAL-true,10-MX_SPI1_Init-SPI1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART3_UART_Init-USART3-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true,6-MX_USART1_UART_Init-USART1-false-HAL-true,7-MX_ADC1_Init-ADC1-false-HAL-true,8-MX_FSMC_Init-FSMC-false-HAL-true,9-MX_TIM2_Init-TIM2-false-HAL-true,9-MX_SPI1_Init-SPI1-false-HAL-true,11-MX_TIM4_Init-TIM4-false-HAL-true,10-MX_TIM3_Init-TIM3-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -326,25 +323,20 @@ SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
-TIM2.IPParameters=Prescaler,Period
-TIM2.Period=99
-TIM2.Prescaler=839
-TIM4.IPParameters=Prescaler,Period
-TIM4.Period=99
-TIM4.Prescaler=839
+TIM3.IPParameters=Prescaler,Period
+TIM3.Period=99
+TIM3.Prescaler=839
 USART1.BaudRate=9600
 USART1.IPParameters=VirtualMode,BaudRate
 USART1.VirtualMode=VM_ASYNC
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
-USART3.BaudRate=4800
+USART3.BaudRate=9600
 USART3.IPParameters=VirtualMode,BaudRate
 USART3.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
-VP_TIM2_VS_ClockSourceINT.Mode=Internal
-VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
-VP_TIM4_VS_ClockSourceINT.Mode=Internal
-VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
+VP_TIM3_VS_ClockSourceINT.Mode=Internal
+VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 board=custom
 isbadioc=false
